# GOLD

./: .gitignore  GEMINI.md  TODO.txt  bridger_design.md  claude.md  development_log.md  development_progress.md  finnhub1.py  gemini.md  history.py  main.py  news  news.txt  nvidia.py  polygon.py  prd(api).md  prd(ocr).md  pyproject.toml  tech_stack.md  test.py  todo.txt  tss.md
Data_source/FMP/: test.py
IBKR/: main.py  news.txt
momentum_api_bot/config/: config.yaml
momentum_api_bot/data/: trades.db
momentum_api_bot/momentum_bot/: database.py  ibkr_connector.py  main.py  models.py  utils.py
momentum_api_bot/momentum_bot/ibkr_bridge/: bridge.py  client.py  client_full.py  simple_test.py  test_bridge.py  test_bridge1.py  test_bridge2.py  wrapper.py
momentum_api_bot/momentum_bot/services/: ai.py  detection_engine.py  execution_service.py  news_handler.py  position_manager.py
