[project]
name = "gold"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "finnhub-python>=2.4.24",
    "ibapi>=9.81.1.post1",
    "pandas>=2.3.2",
    "protobuf>=6.32.1",
    "requests>=2.32.5",
    "websocket>=0.2.1",
]
