[project]
name = "gold"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "finnhub-python>=2.4.24",
    "ib_insync>=0.9.0",
    "numpy>=1.26.0",
    "pandas>=2.3.2",
    "PyYAML>=6.0.1",
    "SQLAlchemy>=2.0.0",
    "protobuf>=6.32.1",
    "requests>=2.32.5",
    "websocket>=0.2.1",
]
